# jbot

./: .gitignore  map.pgm  map.yaml  requirements.txt
building_editor_models/maze/: model.sdf  my_maze.world
building_editor_models/my_house/: model.sdf  model.world
building_editor_models/parking_lot/: model.config  model.sdf  my_parking_lot_with_obstacles.world  parking_lot.world
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
src/dice_game/: README.roboflow.txt  camera_test.py  captured_images  data  data.yaml  data_reader.py  eye_number.py  eye_number_turtle.py  eye_number_usb_camera.py  image_generator_rt.bash  irin_labeller_yolo.py  iriun_labeller.py  iriun_labeller_green_roi.py  iriun_labeller_yolo.py  iriun_labeller_yolo_colored_green.py  iriun_labeller_yolo_on_plate.py  iriun_publisher.py  labeller.py  labeller_realtime.py  main.py  main_h5.py  model_test.py  preprocessed  preprocessed_images  preprocessed_rt  project_paths.py  raw_data_green_dice  raw_data_irin  test.py
src/dice_game/datasets/: captured_images  preprocessed  preprocessed_images  (+3 more)
src/dice_game/ros2/dice_detector_pkg/: package.xml  setup.cfg  setup.py
src/dice_game/ros2/dice_detector_pkg/config/: dice_detector.params.yaml
src/dice_game/ros2/dice_detector_pkg/dice_detector_pkg/: asset_paths.py  detector_node.py
src/dice_game/ros2/dice_detector_pkg/launch/: dice_bringup.launch.py  dice_detector.launch.py
src/my_package_msgs/: CMakeLists.txt  package.xml
src/my_turtlebot_pkg/: package.xml  setup.py
src/sfone_pkg/: package.xml  setup.cfg  setup.py
(+214 files in other folders)
